--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@icons-pack/react-simple-icons": "^10.0.0",
     "@next/third-parties": "^14.2.13",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
